k8s/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: tetris
  name: tetris
  namespace: ines
spec:
  selector:
    matchLabels:
      app: tetris
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
      - image: acrnelabk8slab01.azurecr.io/tetris:1.0.0
        imagePullPolicy: IfNotPresent
        name: tetris
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
