k8s/deploy_grupo2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tetris
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tetris
    spec:
      containers:
      - image: acrnelabk8slab01.azurecr.io/tetris:1.0.0
        imagePullPolicy: IfNotPresent
        name: tetris
        ports:
        - containerPort: 3000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources: {}
        volumeMounts:
        - name: configmapprueba
          mountPath: /opt/cm
        - name: pvc 
          mountPath: /opt/blob
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes: 
      - name: configmapprueba
        configMap: 
          name: configgrupo2 
      - name: pvc 
        persistentVolumeClaim: 
          claimName: azure-blob-storage
