k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tetris
  name: tetris
  namespace: ines
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tetris
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
      - env:
        - name: mysecret
          valueFrom:
            secretKeyRef:
              key: mysecret
              name: configsecret
        image: acrnelabk8slab01.azurecr.io/tetris:1.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
        name: tetris
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: 
          requests:
            cpu: 20m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
        securityContext:
          privileged: false 
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: configmap 
          mountPath: /mnt/config
        - name: blob
          mountPath: /mnt/blob
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes: 
      - name: configmap
        configMap: 
          name: configvolume
      - name: blob
        persistentVolumeClaim:
          claimName: azure-blob-storage
