k8s/deployment_full.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tetris
  name: tetris
  namespace: ines
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tetris
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
      - args:
        - sleep 60
        command: 
        - sh
        - -c 
        image: acrnelabk8slab01.azurecr.io/tetris:1.0.0
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
          preStop: 
        livenessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 3
          periodSeconds: 3
        name: tetris
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: 
          requests:
            cpu: 10m
            memory: 512MiB
          limits:
            cpu: 50m
            memory: 512MiB
        securityContext:
          runAsUser: 2000
          allowPrivilegeEscalation: false
        volumeMount: 
        - name: config-volume
          mountPath: /mnt
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config-volume
        configMap:
          name: special-config
