k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: tetris
  type: ClusterIP
status:
  loadBalancer: {}
