k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: tetris
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: tetris
  type: LoadBalancer
status:
  loadBalancer: {}
