k8s/tetris-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tetris
    role: front
  name: tetris
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tetris
      role: front
  template:
    metadata:
      labels:
        app: tetris
        role: front
    spec:
      containers:
      - image: docker.io/jorgeperona/tetris:latest
        imagePullPolicy: IfNotPresent
        name: tetris
        ports:
        - containerPort: 3000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tetris
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: tetris
  type: LoadBalancer
status:
  loadBalancer: {}
