k8s/wild-west copy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wildwest

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildwest
  namespace: wildwest
spec:
  replicas: 5
  selector:
    matchLabels:
      app: wildwest
  template:
    metadata:
      labels:
        app: wildwest
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: wildwest
        image: gshipley/wildwest:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: wildwest
  namespace: wildwest
  labels:
    app: wildwest
spec:
  type: LoadBalancer
  ports:
    - name: wildwest
      port: 8080
  selector:
    app: wildwest
