k8s/netpol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tetris
    role: front
  name: tetris
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tetris
      role: front
  template:
    metadata:
      labels:
        app: tetris
        role: front
    spec:
      containers:
      - image: acrnelabk8slab01.azurecr.io/tetris:1.0.0
        imagePullPolicy: IfNotPresent
        name: tetris
        ports:
        - containerPort: 3000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ana
spec:
  podSelector:
    matchLabels:
      role: app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ines
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 3000
